--- a/feed/style.css
+++ b/feed/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: rgb(251, 249, 229);
-    background-image: url(/feed/img/background.jpeg);
+    background-image: url(feed/img/background.jpeg);
     
 }
 nav{
