--- a/feed/style.css
+++ b/feed/style.css
@@ -13,7 +13,7 @@ h1{
     font-style: normal;
     color: rebeccapurple;
     text-align: center;
-    font-size: 90px;
+    font-size: 100px;
 }
 
 img{
@@ -21,12 +21,13 @@ img{
   margin-left: auto;
   margin-right: auto;
   width: 35%;
-  
+  align-items: center;
 }
 
 figcaption{
     text-align: center;
     font-size: 15px;
+    
 }
 
 video{
@@ -34,6 +35,7 @@ video{
     margin-left: auto;
     margin-right: auto;
     width: 35%;
+    align-items: center;
   }
 
   section{
@@ -41,4 +43,5 @@ video{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
   }
