--- a/feed/style.css
+++ b/feed/style.css
@@ -41,7 +41,7 @@ video{
 
   section{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
   
