--- a/feed/style.css
+++ b/feed/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: rgb(251, 249, 229);
-    background-image: url(img/background.jpeg);
+    
     
 }
 nav{
@@ -11,9 +11,9 @@ h1{
     font-family: "americane-condensed", sans-serif;
     font-weight: 900;
     font-style: normal;
-    color: rebeccapurple;
+    color: black;
     text-align: center;
-    font-size: 100px;
+    font-size: 125px;
 }
 
 img{
