--- a/feed/style.css
+++ b/feed/style.css
@@ -14,6 +14,21 @@ h1{
     color: black;
     text-align: center;
     font-size: 125px;
+    text-decoration: none;
+}
+
+h3{
+    text-align: center;
+    margin-top: 10px;
+    padding: 20px;
+    border: solid 2px black;
+    border-width: 3px 5px 5px 4px;
+    background-color: lavender;
+    border-radius: 10px;
+    height: 40%;
+    width: 30%;
+    margin: 10px auto;
+
 }
 
 img{
@@ -23,12 +38,12 @@ img{
   width: 50%;
   height: 60%;
   align-items: center;
+  padding-bottom: 10px;
 }
 
 figcaption{
     text-align: center;
-    font-size: 15px;
-    
+    font-size: 16px;   
 }
 
 video{
@@ -37,6 +52,7 @@ video{
     margin-right: auto;
     width: 50%;
     align-items: center;
+    padding-bottom: 10px;
   }
 
   section{
