--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
 body{
-    background-color: lightblue;
-    
-}
-nav{
-    font-size: 20px;
+    background-image: linear-gradient(to right, crimson,lightsalmon, palegoldenrod, lightblue);
+    background-image: url(../img/rubikcube3.jpeg);
+    background-repeat: repeat;
+    background-attachment: fixed;
 }
 
+
+    
 img{
-    display: block;
+  display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  margin-top: 2%;
   align-items: center;
 }
